chore: fix typos Overview.mdx

--- a/catalog/Sui/Overview.mdx
+++ b/catalog/Sui/Overview.mdx
@@ -3,7 +3,7 @@ title: '☆ Overview'
 ---
 
 Sui is a decentralized blockchain platform designed to deliver high performance, scalability, and security, making it an ideal choice for developing and deploying decentralized applications (DApps). Leveraging innovative consensus mechanisms and advanced architecture, Sui aims to overcome the limitations of traditional blockchain networks while providing a seamless and efficient user experience.
-### The Major Features of the Ethereum Blockchain
+### The Major Features of the Sui Blockchain
 
 1. **High Performance**: Sui is built to handle a high volume of transactions with low latency, enabling it to process thousands of transactions per second. This high throughput ensures that the network can support a growing number of users and applications without experiencing congestion or delays.
 
@@ -16,7 +16,7 @@ Sui is a decentralized blockchain platform designed to deliver high performance,
 
 <CardGroup cols={3}>
     <Card title="Raw" icon="binary" href="./Raw/blocks">
-        Ethereum Sui, unprocessed data on the Sui chain, including blocks, transactions, and logs.
+        Sui, unprocessed data on the Sui chain, including blocks, transactions, and logs.
     </Card>
     <Card title="Abstracted" icon="head-side-gear" href="./Abstracted/token_metas">
         The abstracted data tables are built on top of raw data tables and provide a high-level view of the data.
