chore: fix typo Overview.mdx
Arbitrum -> Base

--- a/catalog/Base/Overview.mdx
+++ b/catalog/Base/Overview.mdx
@@ -3,7 +3,7 @@ title: '☆ Overview'
 ---
 
 Base is a Layer 2 scaling solution built on top of the Ethereum blockchain, designed to enhance scalability, reduce transaction costs, and provide a robust environment for decentralized applications (DApps). Developed to address the limitations of Ethereum's main chain, Base utilizes advanced rollup technology to offer fast, secure, and cost-effective transactions while maintaining the security and decentralization of the Ethereum network.
-### The Major Features of the Arbitrum Blockchain
+### The Major Features of the Base Blockchain
 
 1. **Scalability**: Base significantly increases Ethereum's scalability by aggregating multiple transactions into a single batch processed off-chain, which is then committed to the Ethereum main chain. This rollup technique allows Base to handle thousands of transactions per second, reducing congestion and improving network performance.
 
