--- a/theia/TheiaChat/overview.mdx
+++ b/theia/TheiaChat/overview.mdx
@@ -9,7 +9,7 @@ Users can enhance the Chainabse Network when interacting with TheiaChat and bene
 1. **Non-Expert Users:** people without blockchain knowledge and skills, such as blockchain beginners. They can enhance the Chainbase Network by having conversations with TheiaChat and providing feedback on the results of the conversations, and the network rewards serious and honest users.
 2. **Expert Users:** People with blockchain knowledge and skills, such as professional traders and security experts. They can enhance the Chainbase Network by building Theia Task Models in TheiaChat, and the network will reward Task Model builders with high adoption.
 
-Chainbase Labs built the **Thea Security Model (TSM)** as an example to show the ability to build a Task Model based on the crypto world model Theia in TheiaChat. It is a security expert to offer advice in the crypto world, e.g., how to protect my wallet and money. It is constructed by training Theia with security books and community advice. 
+Chainbase Labs built the **Theia Security Model (TSM)** as an example to show the ability to build a Task Model based on the crypto world model Theia in TheiaChat. It is a security expert to offer advice in the crypto world, e.g., how to protect my wallet and money. It is constructed by training Theia with security books and community advice. 
 
 ## How do interactions with TheiaChat enhance the Chainbase Network?
 
