<EDIT> update token symbol

--- a/contributing/governance.mdx
+++ b/contributing/governance.mdx
@@ -2,7 +2,7 @@ Chainbase embraces a governance model based on rough consensus and running code.
 
 1. **Workers** - Provides blockchain data
 2. **Developers** - Build and create manuscripts
-3. **Consumers** - Pay CBT query data network
-4. **Delegators** - Delegate CBT to worker & secure the network
+3. **Consumers** - Pay $C query data network
+4. **Delegators** - Delegate $C to worker & secure the network
 
 This model avoids rigid structures, voting, or official roles, promoting action, diversity of viewpoints, and decentralization. Most changes follow the CIP (Chainbase Improvement Proposal) process.
