--- a/core-concepts/architecture/co_processor_layer.mdx
+++ b/core-concepts/architecture/co_processor_layer.mdx
@@ -16,4 +16,4 @@ The Co-Processor Layer of the Chainbase Network is a component designed to facil
 
 1. **Knowledge Contribution**: Users can contribute their expertise in data processing and specialized task models to the Co-Processor Layer. This collaborative environment harnesses collective intelligence to enhance the network's capabilities.
 2. **Assetization of Knowledge**: Contributions in the Co-Processor Layer are transformed into assets. This layer manages the distribution, circulation, and trading of these assets, ensuring contributors are rewarded for their knowledge and efforts.
-3. **\$CBT Token Ecosystem**: The Co-Processor Layer revolves around the $CBT token, which is integral to the network's incentive structure. It facilitates payments, settlements, staking, and governance, creating a vibrant and dynamic ecosystem.
+3. **\$C Token Ecosystem**: The Co-Processor Layer revolves around the $C token, which is integral to the network's incentive structure. It facilitates payments, settlements, staking, and governance, creating a vibrant and dynamic ecosystem.
