--- a/introduction/networks/delegators.mdx
+++ b/introduction/networks/delegators.mdx
@@ -4,13 +4,13 @@ title: "Delegators"
 
 ## Delegators
 
-Delegators enhance the economic security of the network by staking their tokens to validators and operators. The Chainbase network uses a dual staking mechanism, where delegators can choose to stake `$ETH (or $LST)` and `$CBT`.
+Delegators enhance the economic security of the network by staking their tokens to validators and operators. The Chainbase network uses a dual staking mechanism, where delegators can choose to stake `$ETH (or $LST)` and `$C`.
 
 ### Staking Tokens
 
 Delegators can stake their tokens to support validators and operators, contributing to the network's security and stability.
 
-1. **Choose Tokens**: Decide whether to stake `$ETH (or $LST)` or `$CBT`.
+1. **Choose Tokens**: Decide whether to stake `$ETH (or $LST)` or `$C`.
 2. **Select Validators/Operators**: Choose the validators and operators you want to support.
 3. **Stake Tokens**: Use the staking interface to delegate your tokens to the selected validators and operators.
 
