--- a/introduction/networks/overview.mdx
+++ b/introduction/networks/overview.mdx
@@ -36,10 +36,10 @@ To become an Operator in the network, one must first register as an operator on 
 
 ## Validators
 
-Validators play a key role in maintaining the security and consensus of the network. They are responsible for ensuring data integrity and maintaining network stability. Validators in the network reach consensus through an improved cometbft and use DPOS to determine voting weight based on the size of the staked $CBT data.
+Validators play a key role in maintaining the security and consensus of the network. They are responsible for ensuring data integrity and maintaining network stability. Validators in the network reach consensus through an improved cometbft and use DPOS to determine voting weight based on the size of the staked $C data.
 
 There are certain hardware and software requirements to become a validator in the network. If you wish to become a validator, please contact the team.
 
 ## Delegators
 
-Delegators enhance the economic security of the network by staking their tokens to validators and operators. The Chainbase network uses a dual staking mechanism, where delegators can choose to stake `$ETH (or LST)` and `$CBT`.
+Delegators enhance the economic security of the network by staking their tokens to validators and operators. The Chainbase network uses a dual staking mechanism, where delegators can choose to stake `$ETH (or LST)` and `$C`.
