--- a/introduction/tokenomics.mdx
+++ b/introduction/tokenomics.mdx
@@ -3,18 +3,18 @@ title: 'Tokenomics'
 ---
 ## **Overview**
 
-CBT is the native token of our decentralized data network, designed to facilitate and incentivize various activities within the ecosystem. The tokenomics model aims to support a sustainable and secure network by aligning the incentives of all participants, ensuring the efficient operation of both the execution and consensus layers, and fostering ongoing development and usage of the network. CBT serves as a utility token for coordinating data providers and consumers within the network, incentivizing protocol participants to effectively organize data.
+$C is the native token of our decentralized data network, designed to facilitate and incentivize various activities within the ecosystem. The tokenomics model aims to support a sustainable and secure network by aligning the incentives of all participants, ensuring the efficient operation of both the execution and consensus layers, and fostering ongoing development and usage of the network. $C serves as a utility token for coordinating data providers and consumers within the network, incentivizing protocol participants to effectively organize data.
 
 By using our network, users can easily access data, paying only for the specific information they need. Our network plays a crucial role in making blockchain data more accessible and facilitating its exchange.
 
 ## **Reward Structure**
 ![network participation](../images/tokenomic.png)
-The reward structure of CBT is designed to incentivize network participation and ensure the growth and sustainability of the ecosystem. Rewards are primarily distributed through:
+The reward structure of $C is designed to incentivize network participation and ensure the growth and sustainability of the ecosystem. Rewards are primarily distributed through:
 
 ### **Data Query Fees**
-Data developers create Manuscripts for processing blockchain data, and the resulting datasets can be queried and used. These query operations require the payment of CBT fees.
+Data developers create Manuscripts for processing blockchain data, and the resulting datasets can be queried and used. These query operations require the payment of $C fees.
 
-Data developers pay a certain amount of CBT to the network when querying datasets, which covers the costs of data retrieval and serves as a reward for network resource providers (such as Operators and Validators), ensuring they continue to provide high-quality services.
+Data developers pay a certain amount of $C to the network when querying datasets, which covers the costs of data retrieval and serves as a reward for network resource providers (such as Operators and Validators), ensuring they continue to provide high-quality services.
 
 **Distribution:**
 - **80%** is distributed to Operators and their delegators. This portion of the fees primarily incentivizes Operators to maintain and optimize computing resources, ensuring efficient data query processing.
@@ -22,7 +22,7 @@ Data developers pay a certain amount of CBT to the network when querying dataset
 - **5%** of the data query fee is burned.
 
 ### **Incentive Operator Pools**
-A total of 15% of the CBT token supply will be allocated over 6 years, with 2% unlocked annually. This is to incentivize Operators to provide reliable and diverse computing resources, supporting the network in achieving large-scale data processing.
+A total of 15% of the $C token supply will be allocated over 6 years, with 2% unlocked annually. This is to incentivize Operators to provide reliable and diverse computing resources, supporting the network in achieving large-scale data processing.
 
 **Distribution:**
 - **100%** is distributed to Operators and their delegators based on the quality and quantity of data processing services provided for blockchain projects.
@@ -77,7 +77,7 @@ Data developers are responsible for contributing code for data transformation, m
 Delegators enhance the network's economic security by staking tokens to Validators and Operators.
 
 - Responsibilities include:
-    - Selecting and supporting high-performance Validators and Operators by staking CBT, enhancing their economic security.
+    - Selecting and supporting high-performance Validators and Operators by staking $C, enhancing their economic security.
     - Monitoring and evaluating the performance of Validators and Operators to ensure they provide high-quality services.
     - Participating in network governance by voting on proposals and influencing the network's development and direction.
 
@@ -88,7 +88,7 @@ Delegators enhance the network's economic security by staking tokens to Validato
 
 ## **Economic Sustainability**
 
-Ensuring the long-term value and stability of CBT is crucial for the success of the network. We have implemented several mechanisms to prevent inflation and maintain the utility of the token:
+Ensuring the long-term value and stability of $C is crucial for the success of the network. We have implemented several mechanisms to prevent inflation and maintain the utility of the token:
 
 ### **Inflation Control**
 
@@ -97,12 +97,12 @@ Ensuring the long-term value and stability of CBT is crucial for the success of 
 
 ### **Utility Maintenance**
 
-- **Broad Utility**: CBT tokens are required for various activities within the network, including query fees, staking, and accessing datasets, ensuring continuous demand.
+- **Broad Utility**: $C tokens are required for various activities within the network, including query fees, staking, and accessing datasets, ensuring continuous demand.
 - **Fee Adjustments**: Query fees can be adjusted based on network activity and demand to balance economic incentives and operational costs.
 
 ### **Economic Security**
 
-- **Staking**: Validators and Delegators must stake CBT tokens, aligning their economic interests with the network's security and stability.
+- **Staking**: Validators and Delegators must stake $C tokens, aligning their economic interests with the network's security and stability.
 - **Performance Incentives**: High-performing Operators and Validators receive greater rewards, promoting continuous improvement and network reliability.
 
-By integrating these elements, the CBT tokenomics model aims to create a balanced and sustainable ecosystem that fairly rewards all participants and promotes the long-term success of our decentralized data network.
+By integrating these elements, the $C tokenomics model aims to create a balanced and sustainable ecosystem that fairly rewards all participants and promotes the long-term success of our decentralized data network.
