<Fix> $C token symbol

--- a/introduction/tokenomics.mdx
+++ b/introduction/tokenomics.mdx
@@ -3,7 +3,7 @@ title: 'Tokenomics'
 ---
 ## **Overview**
 
-$C is the native token of our decentralized data network, designed to facilitate and incentivize various activities within the ecosystem. The tokenomics model aims to support a sustainable and secure network by aligning the incentives of all participants, ensuring the efficient operation of both the execution and consensus layers, and fostering ongoing development and usage of the network. $C serves as a utility token for coordinating data providers and consumers within the network, incentivizing protocol participants to effectively organize data.
+\$C is the native token of our decentralized data network, designed to facilitate and incentivize various activities within the ecosystem. The tokenomics model aims to support a sustainable and secure network by aligning the incentives of all participants, ensuring the efficient operation of both the execution and consensus layers, and fostering ongoing development and usage of the network. $C serves as a utility token for coordinating data providers and consumers within the network, incentivizing protocol participants to effectively organize data.
 
 By using our network, users can easily access data, paying only for the specific information they need. Our network plays a crucial role in making blockchain data more accessible and facilitating its exchange.
 
