<Update> Add Public RPC from chainbase maintainer

--- a/developers/open_apis.mdx
+++ b/developers/open_apis.mdx
@@ -6,4 +6,5 @@ title: 'Open APIs'
 ### Testnet
 | **Address** | **Maintainer** |
 |-------------------|--------------------------|
-| https://testnet.s.chainbase.com | Altlayer|
+| https://testnet.s.chainbase.com | [Altlayer](https://www.altlayer.io/) |
+| https://chainbase-testnet-public.s.chainbase.com | [Chainbase](https://www.chainbase.com/) |
