<Update> Add Public RPC maintain by  ZAN

--- a/developers/open_apis.mdx
+++ b/developers/open_apis.mdx
@@ -8,3 +8,4 @@ title: 'Open APIs'
 |-------------------|--------------------------|
 | https://testnet.s.chainbase.com | [Altlayer](https://www.altlayer.io/) |
 | https://chainbase-testnet-public.s.chainbase.com | [Chainbase](https://www.chainbase.com/) |
+| [Sign up and start for free (Zan)](https://zan.top/home/node-service) | [Zan](https://zan.top/) |
