[feat:] manuscript update && merge part of the document

--- a/core-concepts/manuscript/overview.mdx
+++ b/core-concepts/manuscript/overview.mdx
@@ -8,7 +8,7 @@ Manuscript is not just a language specification; it's a protocol, framework, and
 
 # Vision of Manuscript
 
-![manuscript_01.png](../images/manuscript_01.png)
+![manuscript_01.png](../../images/manuscript_01.png)
 
 The vision of Manuscript is to realize "data trade" within the Chainbase network, establishing a Chainbase ecosystem component that allows users to access any data through any means, across any service, using any language. This grand vision can be broken down into the following key aspects:
 
@@ -34,7 +34,7 @@ Leveraging the data capabilities provided by Manuscript, combined with the dual-
 
 As the data access layer in the Chainbase network, Manuscript needs to interface with a large number of existing data protocols. Its core design philosophy revolves around modularity and scalability, consisting of the following key components:
 
-![manuscript_02.png](../images/manuscript_02.png)
+![manuscript_02.png](../../images/manuscript_02.png)
 
 1. Accessor (Data Source):
  - As the lowest-level interface, all services need to implement this interface, responsible for translating upper-layer calls into lower-level requests
