--- a/core-concepts/manuscript/protocol.mdx
+++ b/core-concepts/manuscript/protocol.mdx
@@ -8,7 +8,7 @@ Historically, alchemists often had formula books, also known as "alchemical manu
 
 Now, the datasets in the Chainbase Network is like base metals, and the alchemists (developers) can use Manuscripts to process this data, extracting greater value from the existing data.
 
-![death spiral](../images/manuscripts_overview.png)
+![death spiral](../../images/manuscripts_overview.png)
 
 # Protocol
 
