[doc:] Added zircon roadmap png

--- a/contributing/roadmap.mdx
+++ b/contributing/roadmap.mdx
@@ -11,6 +11,8 @@ The following details Chainbase's path to interoperability, security, and sustai
 
 ## ZIRCON(Genesis)
 
+![zircon-roadmap](../images/zircon-roadmap.png)
+
 📅 May 27, 2024, 12:25:00 PM +UTC
 
 🌄 [chainbase.network on waybackmachine](https://web.archive.org/)
