fix[ton-doc]:add traces

--- a/catalog/Ton/Overview.mdx
+++ b/catalog/Ton/Overview.mdx
@@ -16,4 +16,8 @@ TON (The Open Network) is a decentralized blockchain platform initially develope
     <Card title="Raw" icon="binary" href="./Raw">
         TON Raw, unprocessed data on the TON chain, including blocks, transactions, and messages.
     </Card>
+
+    <Card title="Abstracted" icon="binary" href="./Abstracted">
+        TON Abstracted, abstracted data tables are built on top of raw data tables and provide a high-level view of the data.
+    </Card>
 </CardGroup>
