--- a/catalog/Ethereum/Decoded.mdx
+++ b/catalog/Ethereum/Decoded.mdx
@@ -25,7 +25,7 @@ Log in to the chainbase console and select the decoded dataset to search for the
 
     <pre><code>{`select * FROM uniswap_v2_ethereum.uniswapv2router01_call_addliquidity limit 10'`}</code></pre>
 
-![death spiral](../../../images/catalog/decoded02.jpg)
+![death spiral](../../images/catalog/decoded02.jpg)
 
 ## 1. ethereum.trace_calls_decoded
 
