fix[eth-decoded-doc]:image path

--- a/catalog/Ethereum/Decoded.mdx
+++ b/catalog/Ethereum/Decoded.mdx
@@ -6,7 +6,7 @@ title: 'Decoded'
 Decoded blockchain contract data refers to the information extracted from smart contracts on a blockchain that has been translated into a human-readable format. Smart contracts are self-executing contracts with the terms of the agreement directly written into code. They automatically enforce and execute agreements when predetermined conditions are met. However, the raw data from these contracts is often complex and encoded, making it difficult for developers and businesses to interpret and utilize effectively.
 
 As Ethereum uses the EVM (Ethereum Virtual Machine) as a core component of the network, smart contract code written in high-level languages must be compiled into EVM bytecode to execute. EVM bytecode is the executable code on the EVM, while the Contract ABI (Application Binary Interface) is an interface used to interact with EVM bytecode. For example, if you want to call a function in a smart contract using JavaScript, the ABI serves as an intermediary between your JavaScript code and the EVM bytecode, enabling them to interact. The diagram below illustrates the architecture of the Contract ABI, EVM bytecode, and external components (dApp and network). The left side represents the compilation process, while the right side represents the interaction process.
-![death spiral](../../../images/catalog/contract_decoded.png)
+![death spiral](../../images/catalog/contract_decoded.png)
 
 ### How Chainbase Provides Technical Solutions for Parsing and Serving Decoded Data
 
@@ -19,7 +19,7 @@ As Ethereum uses the EVM (Ethereum Virtual Machine) as a core component of the n
 ### Examples
 
 Log in to the chainbase console and select the decoded dataset to search for the smart contract name you want.
-![death spiral](../../../images/catalog/decoded.jpg)
+![death spiral](../../images/catalog/decoded.jpg)
 
 ### Executing query
 
